fix music player widget bar font that can get too big and stretch the bar

--- a/.config/eww/scss/bar.scss
+++ b/.config/eww/scss/bar.scss
@@ -51,17 +51,17 @@
 }
 
 .bar .music-label {
-  margin-top : 2px;
+  margin-top : 3px;
 }
 
 .bar .music-label .music-title {
   font-weight: 900;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 .bar .music-label .music-artist {
   font-weight: 300;
-  font-size: 11px;
+  font-size: 9px;
 }
 
 .bar .music .controller button {
